test_regress/t/t_sequence_intersect_range_unsup.out
%Error-UNSUPPORTED: t/t_sequence_intersect_range_unsup.v:11:3: Unsupported: assertion contains SVA construct not yet supported by NFA engine (e.g. intersect, sequence and, complex throughout)
                                                             : ... note: In instance 't'
   11 |   assert property (@(posedge clk)
      |   ^~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
